--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,34 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 1em auto;
+  margin: 2.5em auto;
   max-width: 40em;
   padding: 0 0.62em;
   font: 1.2em/1.62 sans-serif;
   text-align: center;
 }
 
-h1,
-h2,
-h3 {
-  line-height: 1.2;
+img {
+  max-width: 250px;
+  height: auto;
+  text-align: center;
+}
+
+nav ul {
+  border: 2px solid #d3d3d3;
+  border-radius: 3px;
+  list-style-type: none;
+  font-family: monospace;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  padding: 15px;
+  display: block;
 }
