--- a/styles/global.css
+++ b/styles/global.css
@@ -32,3 +32,20 @@ nav ul li a {
   padding: 15px;
   display: block;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #282828;
+    color: #ebdbb2;
+  }
+
+  nav ul {
+    border-color: #ebdbb2;
+  }
+
+  a,
+  a:visited,
+  a:active {
+    color: #b16300;
+  }
+}
