--- a/styles/global.css
+++ b/styles/global.css
@@ -46,7 +46,8 @@ h1 {
   text-align: center;
 }
 
-.blog h1 {
+.blog h1,
+.about-me h1 {
   color: #b16300;
   text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68);
 }
