--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,3 +5,10 @@ layout: default
 <h1>{{ page.title }}</h1>
 {% include nav.html %}
 <main class="blog">{{ content }}</main>
+<footer>
+  <p>
+    <strong>Note:</strong> I write these posts without any form of spell
+    checker, so if you see any typos shoot me an
+    <a href="mailto:kyle@kyledormer.co.uk">email</a>.
+  </p>
+</footer>
