--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -10,4 +10,4 @@ layout: default
     {{ page.title }}
 </h1>
 {% include nav.html %}
-<main class="blog">{{ content }}</main>
+<main class="note">{{ content }}</main>
