--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,7 +65,7 @@ blockquote {
   padding-right: 0.8em;
   border-left: 5px solid $orange;
   margin-bottom: 2.5rem;
-  background: #4a4a4a;
+  background: $light-black;
 }
 
 blockquote p {
